# Splatoon2-Credits

./: CMakeLists.txt  README.md  Splatoon2-Credits.sln  main.cpp
Splatoon2-Credits/: Splatoon2-Credits.vcxproj
Splatoon2-Credits/Debug/: Splatoon2-Credits.exe.recipe
Splatoon2-Credits/Debug/Splatoon.0450d75a.tlog/: Splatoon2-Credits.lastbuildstate
Splatoon2-Credits/x64/Debug/: Splatoon2-Credits.exe.recipe
Splatoon2-Credits/x64/Debug/Splatoon.0450d75a.tlog/: Splatoon2-Credits.lastbuildstate
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/glfw/: CMakeLists.txt
shaders/: splash.frag  splash.vert  vertex.vert  wall.vert
src/: CMakeLists.txt  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  color.cpp  color.h  main.cpp
